--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -30,10 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "well_height=125\n",
+    "daily_distance=30\n",
+    "nightly_distance=-20\n",
+    "snail_position=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "days=0\n",
+    "day=1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +66,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not yet\n",
+      "20\n",
+      "not yet\n",
+      "30\n",
+      "not yet\n",
+      "40\n",
+      "not yet\n",
+      "50\n",
+      "not yet\n",
+      "60\n",
+      "not yet\n",
+      "70\n",
+      "not yet\n",
+      "80\n",
+      "not yet\n",
+      "90\n",
+      "not yet\n",
+      "100\n",
+      "not yet\n",
+      "110\n",
+      "not yet\n",
+      "120\n",
+      "not yet\n",
+      "130\n"
+     ]
+    }
+   ],
+   "source": [
+    "snail_position+= daily_distance+nightly_distance\n",
+    "days+=day\n",
+    "while snail_position < well_height:\n",
+    "    print(\"not yet\")\n",
+    "    snail_position+= daily_distance+nightly_distance\n",
+    "    days+=day\n",
+    "    print (snail_position)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 days has passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(days,\"days has passed\") "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +153,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "11\n",
+      "24\n",
+      "81\n",
+      "105\n",
+      "130\n",
+      "time to get out\n",
+      "6 days has passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "well_height=125\n",
+    "nightly_distance=-20\n",
+    "snail_position=0\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "days=0\n",
+    "day=1\n",
+    "position=[]\n",
+    "\n",
+    "for daydist in advance_cm:\n",
+    "    snail_position+= daydist+nightly_distance\n",
+    "    print (snail_position)\n",
+    "    position.append(snail_position)\n",
+    "    days+=day\n",
+    "\n",
+    "    if snail_position > well_height:        \n",
+    "        print(\"time to get out\")\n",
+    "        break\n",
+    "    \n",
+    "print(days,\"days has passed\")\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +205,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 13]\n",
+      "[1, 13, 57]\n",
+      "[1, 13, 57, 24]\n",
+      "[1, 13, 57, 24, 25]\n",
+      "Maximum displacement is 57\n",
+      "Minimum displacement is 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "displacement=[]\n",
+    "\n",
+    "for i in range(0,len(position)-1):\n",
+    "    daydis=position[i+1]-position[i]\n",
+    "    displacement.append(daydis)\n",
+    "    print (displacement)\n",
+    "\n",
+    "print (\"Maximum displacement is\", max(displacement))\n",
+    "print (\"Minimum displacement is\", min(displacement))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average displacement is 24.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Average displacement is\", sum(displacement)/len(displacement))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,6 +264,40 @@
    "source": [
     "#### 4. What is the standard deviation of its displacement? Take into account the snail slides at night."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard Deviation is 18.65475810617763\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "dev=np.std(displacement)\n",
+    "print (\"Standard Deviation is\", dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[H\u001b[2J"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -161,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
