--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -49,10 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins=0\n",
+    "saruman_wins=0\n",
+    "tie=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(0,len(gandalf)):\n",
+    "    if gandalf[i]>saruman[i]:\n",
+    "        spells+=1\n",
+    "        gandalf_wins+=1\n",
+    "    elif saruman[i]>gandalf[i]:\n",
+    "        spells+=1\n",
+    "        saruman_wins+=1\n",
+    "    elif saruman[i]==gandalf[i]:\n",
+    "        spells+=1\n",
+    "        tie+=1    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +112,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins  6  times\n",
+      "Saruman wins  4  times\n",
+      "Tie battles are  0  times\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Gandalf wins \",gandalf_wins,\" times\")\n",
+    "print(\"Saruman wins \",saruman_wins,\" times\")\n",
+    "print(\"Tie battles are \",tie,\" times\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "spells=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,10 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins=0\n",
+    "saruman_wins=0\n",
+    "tie=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_power=[]\n",
+    "saruman_power=[]\n",
+    "streak=[]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +225,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf won\n",
+      "[50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+      "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n",
+      "['Gandalf', 'Saruman', 'Gandalf', 'Saruman', 'Gandalf', 'Saruman', 'Gandalf', 'Gandalf', 'Gandalf', 'Gandalf']\n",
+      "Gandalf wins  7  times\n",
+      "Saruman wins  3  times\n",
+      "Tie battles are  0  times\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,len(gandalf)):\n",
+    "    gandalf_power.append(POWER[gandalf[i]])\n",
+    "    saruman_power.append(POWER[saruman[i]])\n",
+    "    \n",
+    "    if gandalf_power[i]>saruman_power[i]:\n",
+    "        spells+=1\n",
+    "        gandalf_wins+=1\n",
+    "        streak.append(\"Gandalf\")\n",
+    "    elif saruman_power[i]>gandalf_power[i]:\n",
+    "        spells+=1\n",
+    "        saruman_wins+=1\n",
+    "        streak.append(\"Saruman\")\n",
+    "    elif saruman_power[i]==gandalf_power[i]:\n",
+    "        spells+=1\n",
+    "        tie+=1\n",
+    "\n",
+    "Look1= \"Gandalf\"  \n",
+    "Look2= \"Saruman\"\n",
+    "n = 3  \n",
+    "GList = [Look1] * n  \n",
+    "SList = [Look2] * n\n",
+    "\n",
+    "for j in range(len(streak) - n):\n",
+    "    if streak[j:j + n] == GList:\n",
+    "        print (\"Gandalf won\")\n",
+    "        break\n",
+    "    elif streak[j:j + n] == SList:\n",
+    "        print (\"Saruman won\")\n",
+    "        break\n",
+    "    \n",
+    "print(gandalf_power) \n",
+    "print(saruman_power)\n",
+    "print(streak)\n",
+    "        \n",
+    "print(\"Gandalf wins \",gandalf_wins,\" times\")\n",
+    "print(\"Saruman wins \",saruman_wins,\" times\")\n",
+    "print(\"Tie battles are \",tie,\" times\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,16 +291,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average power of Gandalf is  39.0\n",
+      "Average power of Saruman is  30.5\n",
+      "Average power of Gandalf and Saruman is  34.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "power_GS=gandalf_power+saruman_power\n",
+    "mean_G=np.mean(gandalf_power)\n",
+    "mean_S=np.mean(saruman_power)\n",
+    "mean_GS=np.mean(power_GS)\n",
+    "\n",
+    "print(\"Average power of Gandalf is \", mean_G)\n",
+    "print(\"Average power of Saruman is \", mean_S)\n",
+    "print(\"Average power of Gandalf and Saruman is \", mean_GS)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 6. Find the standard deviation of the spell power of Gandalf and Saruman. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Std. Deviation power of Gandalf is  15.132745950421556\n",
+      "Std. Deviation power of Saruman is  15.56438241627338\n",
+      "Std. Deviation power of Gandalf and Saruman is  15.927570436196476\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "power_GS=gandalf_power+saruman_power\n",
+    "std_G=np.std(gandalf_power)\n",
+    "std_S=np.std(saruman_power)\n",
+    "std_GS=np.std(power_GS)\n",
+    "\n",
+    "print(\"Std. Deviation power of Gandalf is \", std_G)\n",
+    "print(\"Std. Deviation power of Saruman is \", std_S)\n",
+    "print(\"Std. Deviation power of Gandalf and Saruman is \", std_GS)"
    ]
   },
   {
@@ -221,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
