--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 9 stops in total\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"There are\",len(stops),\"stops in total\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +77,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 3, -2, -1, 4, -4, -3, -2, -1]\n",
+      "[10, 4, 3, 3, 5, 1, 5, 4, 2]\n",
+      "[0, 1, 5, 4, 1, 5, 8, 6, 3]\n",
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n",
+      "The number of the current passenger at the stop number 1 is 10\n",
+      "The number of the current passenger at the stop number 2 is 13\n",
+      "The number of the current passenger at the stop number 3 is 11\n",
+      "The number of the current passenger at the stop number 4 is 10\n",
+      "The number of the current passenger at the stop number 5 is 14\n",
+      "The number of the current passenger at the stop number 6 is 10\n",
+      "The number of the current passenger at the stop number 7 is 7\n",
+      "The number of the current passenger at the stop number 8 is 5\n",
+      "The number of the current passenger at the stop number 9 is 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_passengers=[]\n",
+    "n_passengers_in=[]\n",
+    "n_passengers_out=[]\n",
+    "current_passenger=[]\n",
+    "\n",
+    "for i in range (0,len(stops)):\n",
+    "    list(stops[i])\n",
+    "    n_passengers.append(stops[i][0]-stops[i][1])\n",
+    "    n_passengers_in.append(stops[i][0])\n",
+    "    n_passengers_out.append(stops[i][1])\n",
+    "    current_passenger.append(sum(n_passengers))\n",
+    "\n",
+    "print(n_passengers)\n",
+    "print(n_passengers_in) \n",
+    "print(n_passengers_out)\n",
+    "print(current_passenger)\n",
+    "\n",
+    "for i in range(0,len(current_passenger)):\n",
+    "    print(\"The number of the current passenger at the stop number\",i+1,\"is\",current_passenger[i])\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,16 +132,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum occupation of the bus are 14 people\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The maximum occupation of the bus are\",max(current_passenger), \"people\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. Calculate the average occupation. And the standard deviation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average occupation of the bus is 9.333333333333334\n",
+      "The standard deviation occupation of the bus is 3.197221015541813\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "mean_passengers=np.mean(current_passenger)\n",
+    "std_passengers=np.std(current_passenger)\n",
+    "\n",
+    "print(\"The average occupation of the bus is\",mean_passengers)\n",
+    "print(\"The standard deviation occupation of the bus is\",std_passengers)\n"
    ]
   },
   {
@@ -117,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
