--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coordinates where an arrow hits another arrow are : [(-3, 2), (4, 5), (5, 7), (2, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "duplicate = list(set([dup for dup in points if points.count(dup) > 1]))\n",
+    "print(\"Coordinates where an arrow hits another arrow are : \" + str(duplicate))\n",
+    "\n",
+    "           "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,10 +83,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total hits inside Quadrant 1 are 10\n",
+      "Total hits inside Quadrant 2 are 2\n",
+      "Total hits inside Quadrant 3 are 2\n",
+      "Total hits inside Quadrant 4 are 6\n",
+      "[4, 0, 4, 1, 3, 4, 3, 5, -5, 2, -4, 0, -4, -1, -3, -4, -3, 5, 5, 2, 9, -8]\n",
+      "[5, 2, 7, -3, -2, 5, 2, 7, 7, 2, 5, -2, 7, 3, 2, -5, 2, 7, 7, 2, 9, -9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_coor=[]\n",
+    "y_coor=[]\n",
+    "Q1=0\n",
+    "Q2=0\n",
+    "Q3=0\n",
+    "Q4=0\n",
+    "            \n",
+    "for i in range(0,len(points)):\n",
+    "    list(points[i])\n",
+    "    x_coor.append(points[i][0])\n",
+    "    y_coor.append(points[i][1])\n",
+    "    if (x_coor[i] > 0) & (y_coor[i] > 0):\n",
+    "        Q1+=1\n",
+    "    elif (x_coor[i] > 0) & (y_coor[i] < 0):\n",
+    "        Q2+=1\n",
+    "    elif (x_coor[i] < 0) & (y_coor[i] < 0):\n",
+    "        Q3+=1\n",
+    "    elif (x_coor[i] < 0) & (y_coor[i] > 0):\n",
+    "        Q4+=1\n",
+    "    elif (x_coor[i] == 0):\n",
+    "        continue\n",
+    "    elif (y_coor[i] == 0):\n",
+    "        continue\n",
+    "\n",
+    "print(\"Total hits inside Quadrant 1 are\", Q1)\n",
+    "print(\"Total hits inside Quadrant 2 are\", Q2)\n",
+    "print(\"Total hits inside Quadrant 3 are\", Q3)\n",
+    "print(\"Total hits inside Quadrant 4 are\", Q4)\n",
+    "print(x_coor)\n",
+    "print(y_coor)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +146,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The coordinates closest to the center is ( 0 , 2 )\n",
+      "The coordinates closest to the center is ( 0 , -2 )\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "distance=[]\n",
+    "for i in range(0,len(points)):\n",
+    "    euclid_dist=np.sqrt(np.square(x_coor[i]-0) + np.square(y_coor[i]-0))\n",
+    "    distance.append(euclid_dist)\n",
+    "\n",
+    "min_dist=min(distance)\n",
+    "min_count=distance.count(min_dist)\n",
+    "min_index=distance.index(min_dist)\n",
+    "\n",
+    "if min_count == 1:\n",
+    "    print(\"The coordinates closest to the center is (\",x_coor[min_index],\",\",y_coor[min_index],\")\")\n",
+    "elif min_count != 1:\n",
+    "    for i in range (0,len(distance)):\n",
+    "        if distance[i]==min_dist:\n",
+    "            print(\"The coordinates closest to the center is (\",x_coor[i],\",\",y_coor[i],\")\")\n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,6 +186,38 @@
     "#### 4. If the archery target has a radius of 9, calculate the number of arrows that won't hit the target. \n",
     "**Hint**: Use the function created in step 3. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.4031242374328485, 2.0, 8.06225774829855, 3.1622776601683795, 3.605551275463989, 6.4031242374328485, 3.605551275463989, 8.602325267042627, 8.602325267042627, 2.8284271247461903, 6.4031242374328485, 2.0, 8.06225774829855, 3.1622776601683795, 3.605551275463989, 6.4031242374328485, 3.605551275463989, 8.602325267042627, 8.602325267042627, 2.8284271247461903, 12.727922061357855, 12.041594578792296]\n",
+      "There are 2 arrows that won't hit the target\n"
+     ]
+    }
+   ],
+   "source": [
+    "missed=0\n",
+    "print(distance)\n",
+    "for i in range (0,len(distance)):\n",
+    "    if distance[i] > 9:\n",
+    "        missed+=1\n",
+    "\n",
+    "print(\"There are\", missed, \"arrows that won't hit the target\")        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -125,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
