update Python-course to the repository

--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_temp=min(temperatures_C)\n",
+    "print(min_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_temp=max(temperatures_C)\n",
+    "print(max_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +103,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 76, 80, 81, 80, 83, 90, 79]\n",
+      "[81, 83, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cond_1=[]\n",
+    "cond_2=[]\n",
+    "for i in range(0,len(temperatures_C)):\n",
+    "    if temperatures_C[i] >= 70:\n",
+    "        cond_1.append(temperatures_C[i])\n",
+    "    if temperatures_C[i] > 80:\n",
+    "        cond_2.append(temperatures_C[i])        \n",
+    "print(cond_1)\n",
+    "print(cond_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +136,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.25\n",
+      "61.5\n",
+      "[80, 53]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import statistics as st\n",
+    "mean_day=np.mean(temperatures_C)\n",
+    "median_day=st.median(temperatures_C)\n",
+    "mode_day=st.multimode(temperatures_C)\n",
+    "print(mean_day)\n",
+    "print(median_day)\n",
+    "print(mode_day)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[33, 66, 65, 62.0, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+      "60.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(temperatures_C[3])\n",
+    "modif_1=((temperatures_C[2]+temperatures_C[4])/2)\n",
+    "temperatures_C[3] = modif_1\n",
+    "print(temperatures_C)\n",
+    "print(mean_day)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[91.4, 150.8, 149.0, 143.60000000000002, 138.2, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_F=[]\n",
+    "for i in range(0,len(temperatures_C)):\n",
+    "    temperatures_F.append(1.8*temperatures_C[i]+32)\n",
+    "\n",
+    "print(temperatures_F)    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +240,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Broken', 'Broken', 'Good']\n",
+      "The cooling system needs to be replaced\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation1=[]\n",
+    "if len(cond_1) >= 4:\n",
+    "    evaluation1.append(\"Broken\")\n",
+    "if len(cond_1) < 4:\n",
+    "    evaluation1.append(\"Good\")\n",
+    "if len(cond_2) >= 1:\n",
+    "    evaluation1.append(\"Broken\")\n",
+    "if len(cond_2) < 1:\n",
+    "    evaluation1.append(\"Good\")    \n",
+    "if mean_day > 65:\n",
+    "    evaluation1.append(\"Broken\")\n",
+    "if mean_day < 65:\n",
+    "    evaluation1.append(\"Good\")\n",
+    "    \n",
+    "print(evaluation1)\n",
+    "\n",
+    "if any(\"Broken\" in test for test in evaluation1):\n",
+    "    print(\"The cooling system needs to be replaced\")\n",
+    "else:\n",
+    "    print(\"The cooling system is working fine\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,10 +295,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 10, 11, 12, 13, 14, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cond_3_hours=[]\n",
+    "for i in range(0,len(temperatures_C)):\n",
+    "    if temperatures_C[i] > 70:\n",
+    "        cond_3_hours.append(i)\n",
+    "print(cond_3_hours)        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,10 +323,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1]\n",
+      "It was more than 4 consecutive hours\n"
+     ]
+    }
+   ],
+   "source": [
+    "consect_index=[]\n",
+    "consect_hours=4\n",
+    "for i in range(0,len(cond_3_hours)-1):\n",
+    "    consect_index.append(cond_3_hours[i+1]-cond_3_hours[i])\n",
+    "print(consect_index)\n",
+    "\n",
+    "Look=1 \n",
+    "n = consect_hours+1  \n",
+    "GList = [Look] * n  \n",
+    "\n",
+    "for j in range(len(consect_index) - n):\n",
+    "    if consect_index[j:j + n] == GList:\n",
+    "        print (\"It was more than 4 consecutive hours\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print (\"It was NOT more than 4 consecutive hours\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +364,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Broken', 'Broken', 'Good']\n",
+      "The cooling system needs to be replaced\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation2=[]\n",
+    "if len(consect_index) > 4:\n",
+    "    evaluation2.append(\"Broken\")\n",
+    "if len(consect_index) < 4:\n",
+    "    evaluation2.append(\"Good\")\n",
+    "if len(cond_2) >= 1:\n",
+    "    evaluation2.append(\"Broken\")\n",
+    "if len(cond_2) < 1:\n",
+    "    evaluation2.append(\"Good\")    \n",
+    "if mean_day > 65:\n",
+    "    evaluation2.append(\"Broken\")\n",
+    "if mean_day < 65:\n",
+    "    evaluation2.append(\"Good\")\n",
+    "    \n",
+    "print(evaluation2)\n",
+    "\n",
+    "if any(\"Broken\" in test for test in evaluation2):\n",
+    "    print(\"The cooling system needs to be replaced\")\n",
+    "else:\n",
+    "    print(\"The cooling system is working fine\")    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,16 +408,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.833333333333336\n",
+      "145.1\n",
+      "The relation between both average values is 82.26666666666665\n",
+      "The relation between both average values is 0.4330346887204227\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_C=np.mean(temperatures_C)\n",
+    "mean_F=np.mean(temperatures_F)\n",
+    "print(mean_C)\n",
+    "print(mean_F)\n",
+    "print(\"The relation between both average values is\", (mean_F/mean_C))\n",
+    "print(\"The relation between both average values is\", (mean_C/mean_F))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 5. Find the standard deviation of the temperature lists (ºC and ºF). What is the relation between both standard deviations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.633485192833897\n",
+      "26.34027334710101\n",
+      "The relation between both standard deviations is 1.7999999999999998 ,which is the 1.8 correction when converting Celcius to Fahrenheit\n",
+      "The relation between both standard deviations is 0.5555555555555556 ,which is the 0.56 correction when converting Fahrenheit to Celcius\n"
+     ]
+    }
+   ],
+   "source": [
+    "std_C=np.std(temperatures_C)\n",
+    "std_F=np.std(temperatures_F)\n",
+    "print(std_C)\n",
+    "print(std_F)\n",
+    "print(\"The relation of Fahrenheit to Celcius is\", std_F/std_C,\",which is the 1.8 correction when converting Celcius to Fahrenheit\")\n",
+    "print(\"The relation of Celcius to Fahrenheit is\", std_C/std_F,\",which is the 0.56 correction when converting Fahrenheit to Celcius\")"
    ]
   },
   {
@@ -254,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
